# GEngine

./: .gitignore  CMakelists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.txt  README.md  autosave.json  diff.txt  imgui.ini  main.cpp  main.ilk  play_temp.json  scene.json
.github/workflows/: ci.yml
assets/shaders/: PostProcessBlur.glsl  PostProcessComposite.glsl  PostProcessThreshold.glsl
cmake/: GEngineConfig.cmake.in  PlatformHelpers.cmake
cmake/toolchains/: emscripten.cmake  linux-clang.cmake  linux-gcc.cmake  macos-clang.cmake  mingw64-gcc.cmake
docs/: IMPLEMENTATION_GUIDE_PHASE1.md  IMPLEMENTATION_GUIDE_PHASE2.md  IMPLEMENTATION_GUIDE_PHASE3.md  LEARN_ECS.md  LEARN_RENDERER.md  PHASE1_REFERENCE.md  README.md  THREADING_CONTRACT.md
include/GEngine/: Audio.h  Core.h  ECS.h  GEngine.h  Networking.h  Physics.h  Platform.h  Renderer.h  Scripting.h
scripts/: ExampleScripts.cs  GameDemo.cs  package_sdk.bat  run_tests.bat
sdk/: CMakeLists.txt
sdk/GameEngine.SDK/: AssemblyLoader.cs  ComponentWrapper.cs  Entity.cs  GameEngine.SDK.csproj  Input.cs  ScriptBase.cs
sdk/templates/new_game/: CMakeLists.txt  main.cpp
src/core/: ge_core.h  version.h  version.h.in
src/core/assets/: Asset.h  AssetCache.h  AssetCooker.cpp  AssetCooker.h  AssetDependencyGraph.h  AssetImporter.cpp  AssetImporter.h  AssetLoader.h  AssetManager.cpp  AssetManager.h  AssetMetadata.h  Compression.h  EmscriptenAssetLoader.cpp  EmscriptenAssetLoader.h  MaterialGraphAsset.cpp  MaterialGraphAsset.h  ModelAsset.h  SceneAsset.h  ShaderAsset.h  TextureAsset.h  TilemapAsset.h  TilesetAsset.h
src/core/audio/: AudioCategory.cpp  AudioCategory.h  AudioDucking.cpp  AudioDucking.h  AudioEngine.cpp  AudioEngine.h  miniaudio_impl.cpp
src/core/behaviortree/: BehaviorTreeComponent.h  BehaviorTreeNode.h  BehaviorTreeRegistry.cpp  BehaviorTreeRegistry.h  BehaviorTreeVM.cpp  BehaviorTreeVM.h
src/core/cmd/: Command.h  CommandHistory.cpp  CommandHistory.h  EntityCommands.h
src/core/containers/: dynamic_array.h  handle.h  hash_map.h  proxy_containers.h
src/core/debug/: FrameBudgetProfiler.cpp  FrameBudgetProfiler.h  FramePasses.h  ImGuiFlamegraph.h  MetricBuffer.h  MetricRegistry.h  MetricTypes.h  Profiler.h  ProfilerEx.h  ProfilerPanel.h  TelemetryServer.h  TelemetrySession.h  TimelineView.h  assert.h  log.cpp  log.h
src/core/ecs/: ComponentArray.h  ComponentRegistry.h  Entity.h  EntityCloner.h  EntityFactory.h  EntityManager.h  Physics3D_API.cpp  Physics3D_API.h  PrefabRegistry.h  Query.h  ScriptMacros.h  ScriptRegistry.cpp  ScriptRegistry.h  ScriptableEntity.cpp  ScriptableEntity.h  System.h  SystemExecutor.cpp  SystemExecutor.h  SystemGraph.cpp  SystemGraph.h  SystemManager.cpp  SystemManager.h  World.h  World_Helpers.cpp
src/core/editor/: BehaviorTreeEditor.cpp  BehaviorTreeEditor.h  ConsolePanel.cpp  ConsolePanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  DockManager.h  EditorPaths.cpp  EditorPaths.h  EditorToolbar.cpp  EditorToolbar.h  GizmoRenderer.h  MaterialEditorPanel.cpp  MaterialEditorPanel.h  MemoryStatsPanel.cpp  MemoryStatsPanel.h  PrecisionEditTool.cpp  PrecisionEditTool.h  PrefabOverridesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  TransformGizmo.cpp  TransformGizmo.h  VSCodeUtility.cpp  VSCodeUtility.h  ViewportPanel.cpp  ViewportPanel.h  VisualScriptEditor.cpp  VisualScriptEditor.h
src/core/gameplay/: GridPathfinder.h
src/core/input/: DeadzoneProcessor.h  GamepadManager.cpp  GamepadManager.h  InputAction.h  InputManager.cpp  InputManager.h  InputMapping.cpp  InputMapping.h
src/core/localization/: FontManager.h  GlyphCache.h  LocaleDictionary.cpp  LocalizationManager.h  TextRenderer.h
src/core/material/: MaterialGraph.cpp  MaterialGraph.h
src/core/math/: BoundingVolumes.h  Mat4x4.h  VecTypes.h  mathUtils.h  quaternion.h
src/core/memory/: allocator.cpp  allocator.h
src/core/navigation/: NavMeshGenerator.cpp  NavMeshGenerator.h  NavMeshQuery.cpp  NavMeshTypes.h
src/core/net/: AOISpatialIndex.h  CharacterState.h  ClientPredictionState.h  ClientPredictionSystem.h  ComponentSerializer.h  Connection.h  CryptoTypes.cpp  CryptoTypes.h  DirtyTracker.h  EntityStateHistory.h  GameState.h  Handshake.h  InterestManager.h  LagCompensationSystem.h  Message.h  NetworkEntity.h  NetworkManager.h  NetworkMode.cpp  NetworkMode.h  NetworkSerializer.cpp  NetworkSerializer.h  NetworkStats.h  PredictionBuffer.h  Replication.h  ReplicationAttributes.h  ReplicationManager.cpp  ReplicationManager.h  ReplicationSystem.h  SecureChannel.h  Socket.h  StateRecorder.h
src/core/particles/: Particle.h  ParticlePool.h
src/core/platform/: Application.cpp  Application.h  FileSystem.h  GLFWInput.h  (+13 more)
src/demos/multiplayer/: CMakeLists.txt  DemoClient.cpp  DemoClient.h  DemoServer.cpp  DemoServer.h  PlayerComponent.h  main.cpp
src/demos/physics/: CMakeLists.txt  CameraController.h  PhysicsDemo.cpp  PlayerSetup.h  main.cpp
src/server/: ServerApplication.cpp  ServerApplication.h  main.cpp
src/shaders/: basic.frag  basic.vert  brdf.glsl  composite.frag.glsl  decal.frag.glsl  decal.vert.glsl  equirect_to_cubemap.glsl  forward_plus_lighting.glsl  gbuffer.frag.glsl  gbuffer.vert.glsl  irradiance_convolution.glsl  pbr.frag  pbr.vert  plasma.glsl  plasma_material.glsl  postprocess.frag.glsl  postprocess.vert.glsl  prefilter.glsl  refraction.glsl  shadow.frag  shadow.vert  skybox.glsl  sprite_batch.frag  sprite_batch.vert  ssao.glsl  ssao_blur.glsl  ssgi.glsl  ssr.glsl  ssss.glsl  taa.glsl  volumetric_fog.glsl  volumetric_lighting.glsl
tests/: CMakeLists.txt  StressTest.h  ThreadSafetyValidator.h  test.cpp  test_ecs.cpp
tests/integration/: test_audio.cpp  test_component_registry.cpp  test_ecs.cpp  test_editor_regression.cpp  test_interest.cpp  test_level_authoring.cpp  test_localization.cpp  test_network.cpp  test_network_security.cpp  test_network_soak.cpp  test_physics_regression.cpp  test_pixel_foundation.cpp  test_render_regression.cpp
tests/stress/: test_thread_safety.cpp
tests/unit/: test_containers.cpp  test_math.cpp  test_memory.cpp
tmp/: test_bitset.cpp
web/: index.html
(+212 files in other folders)
